Adjust heap/stack size lower.